<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.food.nextdoor.activity.seller.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/navigation_dishes"
            android:name="com.food.nextdoor.activity.seller.ui.dishes.DishesFragment"
            android:label="@string/title_dishes"
            tools:layout="@layout/fragment_dishes" />

    <fragment
            android:id="@+id/navigation_account"
            android:name="com.food.nextdoor.activity.seller.ui.account.AccountFragment"
            android:label="@string/title_account"
            tools:layout="@layout/fragment_account" />

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.food.nextdoor.activity.seller.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/profile_fragment" />
</navigation>