<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.buyer.HomeActivity"
        tools:showIn="@layout/app_bar_main">

    <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:background="@color/White"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/swipe_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:weightSum="2">

            <TextView
                    android:id="@+id/tv_ongoing"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/DarkBlue"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/ongoing"
                    android:textColor="@color/White"
                    android:textSize="16dp" />

            <TextView
                    android:id="@+id/tv_dish_count"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/DarkBlue"
                    android:gravity="center"
                    android:paddingBottom="6dp"
                    android:text="Dish 6 | 15 Meals"
                    android:textColor="@color/White"
                    android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/ll_tomorow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:weightSum="2">

            <TextView
                    android:id="@+id/tv_tomorow"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/tomorrows"
                    android:textColor="@color/Black"
                    android:textSize="16dp" />

            <TextView
                    android:id="@+id/tv_dish_count_tomorow"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="6dp"
                    android:text="Dish 16 | 5 Meals"
                    android:textColor="@color/Orange"
                    android:textSize="14dp" />

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-1dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:weightSum="2">


            <TextView
                    android:id="@+id/tv_custom_meals"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:text="@string/customized"
                    android:textColor="@color/Black"
                    android:textSize="16dp" />


            <TextView

                    android:id="@+id/tv_your_meal"

                    android:layout_width="wrap_content"
                    android:layout_height="0dp"

                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="6dp"
                    android:text="Your Meals"
                    android:textColor="@color/Orange"
                    android:textSize="14dp" />

        </LinearLayout>


    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:id="@+id/swipe_me"
            android:background="#0FFFFFFB"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_home_buyer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0FFFFFFB"
                android:focusableInTouchMode="true" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:id="@+id/swipe_me_empty"
            android:background="#0FFFFFFB"
            android:gravity="top|center_horizontal"
            android:text="no item found"
            android:visibility="gone"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"/>

</androidx.constraintlayout.widget.ConstraintLayout>

