<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/tv_dish_name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView_detail_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:orientation="vertical"
            app:cardCornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/img_dish_image_detail_rv"
                android:layout_width="85dp"
                android:layout_height="90dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="10dp" />
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/tv_serving_per_person_detail_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="1 Person"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/tv_dish_name_detail_main_rv" />

    <TextView
            android:id="@+id/tv_chef_name_with_flat_number_detail_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="Keerthi A2-503"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_serving_per_person_detail_rv" />

    <TextView
            android:id="@+id/tv_dish_available_time_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="11:00 AM - 8:30 PM"
            android:textColor="@color/Black"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView97"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView97"
            app:layout_constraintTop_toBottomOf="@+id/tv_chef_name_with_flat_number_detail_rv" />

    <TextView
            android:id="@+id/tv_dish_price_detail_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Rs.99"
            android:textColor="@color/Black"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/serving"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/cardView_detail_rv"
            app:layout_constraintTop_toBottomOf="@+id/tv_dish_name_detail_main_rv" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/chef"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/cardView_detail_rv"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
            android:id="@+id/img_dish_symbol_detail_rv"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/cardView_detail_rv"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

    <TextView
            android:id="@+id/tv_dish_name_detail_main_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="Kadai Panner"
            android:textColor="@color/Black"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_dish_symbol_detail_rv"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btn_buy_detail_row"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/buy_button_round_corner"
            android:text="@string/buy"
            android:textColor="@color/White"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_chef_name_with_flat_number_detail_rv" />

    <LinearLayout

            android:id="@+id/btn_lay_detail_row"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_chef_name_with_flat_number_detail_rv">


        <TextView

                android:id="@+id/tv_minus_detail_row"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/quantity_btn"
                android:gravity="center"
                android:text="-"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

        <TextView

                android:id="@+id/tv_quantity_detail_row"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/White"
                android:gravity="center"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

        <TextView

                android:id="@+id/tv_plus_detail_row"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/quantity_btn"
                android:gravity="center"
                android:text="+"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
    </LinearLayout>

    <View
            android:id="@+id/view11"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/LightSkyBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dish_available_time_detail" />

    <TextView
            android:id="@+id/textView97"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Timings:"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>