<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/img_dish_symbol_home"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/veg_symbol"
            tools:ignore="ContentDescription" />

    <TextView
            android:id="@+id/tv_dish_name_home"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="top"
            android:text="Kadai Paneer"
            android:textColor="@color/Black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_dish_symbol_home"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_dish_price_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Rs. 999"
            android:textColor="@color/Black"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_chef_name_with_flat_number_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            android:text="Keerthi A2-503"
            android:textColor="@color/Black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_remove"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
            android:id="@+id/tv_dish_available_time_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:maxLines="1"
            android:text="11:00 am - 10:30 pm"
            android:textColor="@color/Black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView74"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_remove"
            app:layout_constraintStart_toEndOf="@+id/textView74"
            app:layout_constraintTop_toTopOf="@+id/textView74" />

    <TextView
            android:id="@+id/tv_serving_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:maxLength="12"
            android:text="1 Person"
            android:textColor="@color/Black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_dish_name_home" />


    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serving"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/img_dish_symbol_home"
            app:layout_constraintTop_toBottomOf="@+id/tv_dish_name_home" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/chef"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.food.nextdoor.view.AddCartView
            android:id="@+id/btn_add_remove"
            android:layout_width="wrap_content"

            android:layout_height="25dp"

            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_dish_available_time_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_chef_name_with_flat_number_home" />

    <TextView
            android:id="@+id/tv_signature_dish_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Signature Dish"
            android:textColor="@color/Orange"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/LightSkyBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout26" />

    <TextView
            android:id="@+id/textView74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Timings:"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="20dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_dish_name_home">

        <ImageView
                android:id="@+id/img_dish_image_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:id="@+id/linearLayout26"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/GhostWhite"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signature_dish_home">


        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_chef_profile_home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/profile" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

            <TextView
                    android:id="@+id/tv_dish_reviews_home_row"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Dish Reviews"
                    android:textSize="14dp" />

            <TextView
                    android:id="@+id/tv_num_of_dish_reviews_home"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="57"
                    android:textColor="@color/SkyBlue"
                    android:textSize="14dp"
                    android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

            <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Dish Sold"
                    android:textSize="14dp" />

            <TextView
                    android:id="@+id/tv_dish_sold_home"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="263"
                    android:textColor="@color/DarkGrey"
                    android:textSize="14dp"
                    android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="2">

            <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/available"
                    android:textSize="14dp" />

            <TextView
                    android:id="@+id/tv_dish_available_home"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/DarkGrey"
                    android:textSize="14dp"
                    android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

